Master
------

* Move SessionStorage from a generated class to a re-usable module. To
  migrate to the new module, delete the old generated SessionStorage class
  in the models directory and include the SessionStorage module in your Shop model.
* Adds a WebhooksManager class and allows you to configure what webhooks your app
  needs. The rest is taken care of by ShopifyApp provided you set up a backgroud queue
  with ActiveJob

6.2.1
-----

* add callback url to omniauth provider
* add default redirect_uri

6.2.0
-----

* Return an HTTP 401 for XHRs that aren't logged in

6.1.3
-----
* add redirect_uri which is now required
* fix login again with different shop

6.0.0
-----
* Re-written as a proper rails engine
* New modular generators
* generates embedded apps by default
* can bootstrap your app with a standard shop table and model
* code now lives as concerns in the engine which are included in your controllers
  feel free to override anything you need in your app

Historical
----------
* re-styled with Twitter Bootstrap css framework and updated docs [warren]
* Require shopify_api gem via proper railtie setup [willem]
* Don't require shopify.yml when using environment variables [cody]
* Renamed instances of current_shop to shop_session to maintain logic
* Replace old LoginController with a RESTful SessionsController